--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "naive-ui": "^2.39.0",
     "nuxt": "^3.12.4",
     "nuxtjs-naive-ui": "^1.0.2",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.3"
   }
 }
