--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "nuxt-windicss": "^3.0.1",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-vue-components": "^0.27.3"
   }
