--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@css-render/vue3-ssr": "^0.15.14",
+    "@vicons/ionicons5": "^0.12.0",
     "naive-ui": "^2.39.0",
     "nuxt": "^3.12.4",
-    "nuxtjs-naive-ui": "^1.0.2",
     "vue": "latest"
   },
   "devDependencies": {
