--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vicons/ionicons5": "^0.12.0",
     "naive-ui": "^2.39.0",
     "nuxt": "^3.12.4",
+    "nuxtjs-naive-ui": "^1.0.2",
     "vue": "latest"
   },
   "devDependencies": {
