--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@unocss/nuxt": "^0.61.5",
     "nuxt-windicss": "^3.0.1",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-vue-components": "^0.27.3"
