--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
+    "@nuxtjs/composition-api": "^0.34.0",
+    "@pinia/nuxt": "^0.5.1",
     "@vicons/ionicons5": "^0.12.0",
     "naive-ui": "^2.39.0",
     "nuxt": "^3.12.4",
     "nuxtjs-naive-ui": "^1.0.2",
+    "pinia": "^2.1.7",
     "vue": "latest"
   },
   "devDependencies": {
