--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@unocss/nuxt": "^0.61.5",
     "nuxt-windicss": "^3.0.1",
     "unplugin-auto-import": "^0.18.0",
